fazendo a nav bar da pagina principal

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -6,5 +6,21 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Facilistas</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="../img/logo.png" alt="logo" />
+      <nav>
+        <a href="#">Início</a>
+        <a href="#">Quem Somos</a>
+        <a href="#">Para quem</a>
+        <a href="#">Faça sua lista</a>
+      </nav>
+      <div>
+        <button href="#">Login</button>
+        <button href="#">Sign up</button>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
