--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Facilistas</title>
   </head>
   <body>
-    <header>
-      <img src="../img/logo.png" alt="logo" />
-      <nav>
-        <a href="#">Início</a>
-        <a href="#">Quem Somos</a>
-        <a href="#">Para quem</a>
-        <a href="#">Faça sua lista</a>
+    <header id="cabecalho">
+      <img src="../img/logo.png" alt="logo" id="logo" />
+      <nav id="navbar">
+        <a href="#" class="navbar-item">Início</a>
+        <a href="#" class="navbar-item">Quem Somos</a>
+        <a href="#" class="navbar-item">Para quem</a>
+        <a href="#" class="navbar-item">Faça sua lista</a>
       </nav>
-      <div>
-        <button href="#">Login</button>
-        <button href="#">Sign up</button>
+      <div id="btnHeader-div">
+        <button href="#" class="btn-header" id="btnHeader-login">Login</button>
+        <button href="#" class="btn-header" id="btnHeader-singUp">
+          Sign up
+        </button>
       </div>
     </header>
     <main></main>
