adicionando section Inicio

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -10,7 +10,7 @@
     <header id="cabecalho">
       <img src="../img/logo.png" alt="logo" id="logo" />
       <nav id="navbar">
-        <a href="#" class="navbar-item">Início</a>
+        <a href="#inicio" class="navbar-item">Início</a>
         <a href="#" class="navbar-item">Quem Somos</a>
         <a href="#" class="navbar-item">Para quem</a>
         <a href="#" class="navbar-item">Faça sua lista</a>
@@ -22,7 +22,18 @@
         </button>
       </div>
     </header>
-    <main></main>
+    <main id="principal">
+      <section id="inicio">
+        <div id="titulos-principais">
+          <div id="div-titulos">
+            <h1 id="title"><span>Simplifique com</span> FaciListas!</h1>
+            <p>Solução inteligente para organização e criação de listas</p>
+          </div>
+          <button id="btn-action-prin">Inscreva-se de graça</button>
+        </div>
+        <img src="../img/imgPrincipal.png" alt="banner principal" />
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
