adicionando section quemSomos

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -33,6 +33,7 @@
         </div>
         <img src="../img/imgPrincipal.png" alt="banner principal" />
       </section>
+      <section id="quemSomos"></section>
     </main>
     <footer></footer>
   </body>
