ajustando link do quem somos no html

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -11,7 +11,7 @@
       <img src="../img/logo.png" alt="logo" id="logo" />
       <nav id="navbar">
         <a href="#inicio" class="navbar-item">Início</a>
-        <a href="#" class="navbar-item">Quem Somos</a>
+        <a href="#quemSomos" class="navbar-item">Quem Somos</a>
         <a href="#" class="navbar-item">Para quem</a>
         <a href="#" class="navbar-item">Faça sua lista</a>
       </nav>
