ajustando quem somos

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -33,7 +33,29 @@
         </div>
         <img src="../img/imgPrincipal.png" alt="banner principal" />
       </section>
-      <section id="quemSomos"></section>
+      <section id="quemSomos">
+        <div id="title-quemSomos">
+          <h2>FaciListas</h2>
+          <h4>Somos um site inteligente para pessoas ocupadas</h4>
+        </div>
+        <div id="infos-quemSomos">
+          <img src="../img/imgQuemSomos.png" alt="imagem" />
+          <div id="txt-quemSomos">
+            <h3>FaciListas é:</h3>
+            <p>
+              Acesso às suas listas de compras em qualquer lugar, utilizando
+              dispositivos móveis como smartphone e tablets para garantir
+              praticidade e conveniência.
+            </p>
+            <p>
+              Acessível e útil para pessoas de todas as idades e origens
+              sociais, garantindo uma experiência inclusiva para todos os
+              usuários.
+            </p>
+            <button>Inscreva-se de graça</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
