adicionando o html da section para quem

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -12,7 +12,7 @@
       <nav id="navbar">
         <a href="#inicio" class="navbar-item">Início</a>
         <a href="#quemSomos" class="navbar-item">Quem Somos</a>
-        <a href="#" class="navbar-item">Para quem</a>
+        <a href="#paraQuem" class="navbar-item">Para quem</a>
         <a href="#" class="navbar-item">Faça sua lista</a>
       </nav>
       <div id="btnHeader-div">
@@ -53,6 +53,46 @@
               usuários.
             </p>
             <button>Inscreva-se de graça</button>
+          </div>
+        </div>
+      </section>
+      <section id="paraQuem">
+        <div>
+          <h3>Você é um amante da lista?</h3>
+          <h3>
+            Com o <span>Faci</span>Listas crie quantas listas você precisar.
+          </h3>
+        </div>
+        <div>
+          <h4>Para quem o FaciListas é adequado?</h4>
+          <div id="cards-paraQuem">
+            <div class="card-paraQuem">
+              <img src="../img/iconMember.png" alt="icone membros" />
+              <h5>Indivíduos Domésticos</h5>
+              <p>
+                Para você, homem e mulher, responsável por gerenciar as compras
+                para casa, família e pet, e que busca eficiência e organização
+                no processo de compra
+              </p>
+            </div>
+            <div class="card-paraQuem">
+              <img src="../img/IconiconInd.png" alt="icone industrias" />
+              <h5>Profissionais Ocupados</h5>
+              <p>
+                Para você com agenda agitada que deseja otimizar seu tempo ao
+                criar e gerenciar listas, evitando retrabalho e garantindo que
+                não esqueça itens importantes
+              </p>
+            </div>
+            <div class="card-paraQuem">
+              <img src="../img/IconiconWorld.png" alt="icone planeta" />
+              <h5>Ecoconscientes</h5>
+              <p>
+                Para você que é preocupado com o meio ambiente e opta por
+                soluções digitais para evitar o acúmulo de papel com listas de
+                compras, contribuindo para a redução do desperdício
+              </p>
+            </div>
           </div>
         </div>
       </section>
