adicionando css da section para quem

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -57,18 +57,21 @@
         </div>
       </section>
       <section id="paraQuem">
-        <div>
+        <div id="title-paraQuem">
           <h3>Você é um amante da lista?</h3>
           <h3>
             Com o <span>Faci</span>Listas crie quantas listas você precisar.
           </h3>
         </div>
-        <div>
+        <div id="div-cards-paraQuem">
           <h4>Para quem o FaciListas é adequado?</h4>
           <div id="cards-paraQuem">
             <div class="card-paraQuem">
               <img src="../img/iconMember.png" alt="icone membros" />
-              <h5>Indivíduos Domésticos</h5>
+              <h5>
+                Indivíduos <br />
+                Domésticos
+              </h5>
               <p>
                 Para você, homem e mulher, responsável por gerenciar as compras
                 para casa, família e pet, e que busca eficiência e organização
@@ -77,7 +80,10 @@
             </div>
             <div class="card-paraQuem">
               <img src="../img/IconiconInd.png" alt="icone industrias" />
-              <h5>Profissionais Ocupados</h5>
+              <h5>
+                Profissionais <br />
+                Ocupados
+              </h5>
               <p>
                 Para você com agenda agitada que deseja otimizar seu tempo ao
                 criar e gerenciar listas, evitando retrabalho e garantindo que
