adicionando espaco da section faça sua lista

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -13,7 +13,7 @@
         <a href="#inicio" class="navbar-item">Início</a>
         <a href="#quemSomos" class="navbar-item">Quem Somos</a>
         <a href="#paraQuem" class="navbar-item">Para quem</a>
-        <a href="#" class="navbar-item">Faça sua lista</a>
+        <a href="#crieSuaLista" class="navbar-item">Faça sua lista</a>
       </nav>
       <div id="btnHeader-div">
         <button href="#" class="btn-header" id="btnHeader-login">Login</button>
@@ -102,6 +102,7 @@
           </div>
         </div>
       </section>
+      <section id="crieSuaLista"></section>
     </main>
     <footer></footer>
   </body>
