alteração index.html e style.css da pasta cadastro

--- a/codigo-fonte/cadastro/index.html
+++ b/codigo-fonte/cadastro/index.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
-    <form name="form_cadastro" action="" method="post"> <!--duvida no action-->
-        Criar conta
-        <p> <input type="text" name="nome" placeholder="Nome"> </p>
-        <p> <input type="email" name="email" placeholder="e-mail"> </p>
-        <p> <input type="password" name="password" placeholder="Senha"> </p>
-        <button>Cadastrar</button>
-    </form>
+    <div>
+        <form name="form_cadastro" action="" method="post"> <!--duvida no action-->
+            Criar conta
+            <p> <input type="text" name="nome" placeholder="Nome"> </p>
+            <p> <input type="email" name="email" placeholder="e-mail"> </p>
+            <p> <input type="password" name="password" placeholder="Senha"> </p>
+            <button>Cadastrar</button>
+        </form>
+        <a href="/codigo-fonte/login/index.html">Já possui conta?</p>
+    </div>
     <img src="/codigo-fonte/img/imgQuemSomos.png"> <!--imagem provisoria-->
 </body>
 
