feat: Adicionar funcionalidades de marcar um item já concluído
Criar uma nova lista, através de um modelo pronto

--- a/codigo-fonte/sistema/index.html
+++ b/codigo-fonte/sistema/index.html
@@ -3,22 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FaciListas</title>
+    <title>FaciListas - Minhas Listas</title>
+    <link rel="stylesheet" href="./style/header.css" />
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="stylesheet" href="./style/footer.css" />
-    <link rel="stylesheet" href="../paginaIncial/style/cabecalho.css" />
   </head>
   <body>
     <header id="cabecalho">
-      <img src="../img/logo.png" alt="logo" id="logo" />
-      <nav id="navbar">
-        <a href="#inicio" class="navbar-item">Início</a>
-        <a href="#quemSomos" class="navbar-item">Quem Somos</a>
-        <a href="#paraQuem" class="navbar-item">Para quem</a>
-        <a href="#crieSuaLista" class="navbar-item">Faça sua lista</a>
-      </nav>
+      <img src="./assets/secondLogo.png" alt="logo" id="logo" />
       <div id="btnHeader-div">
-        <button href="#" class="btn-header" id="btnHeader-singUp">Sair</button>
+        <button href="#" class="btn-header" id="btnHeader-logout">Sair</button>
       </div>
     </header>
     <main>
@@ -54,6 +48,8 @@
       </p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts/header.js"></script>
+    <script src="scripts/yourLists.js"></script>
+    <script src="scripts/createYourLists.js"></script>
   </body>
 </html>
