--- a/codigo-fonte/login/login.html
+++ b/codigo-fonte/login/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style-login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -48,6 +48,6 @@
         </div>
     </div>
    
-    <script src="js/script.js"></script>
+    <script src="js/script-login.js"></script>
 </body>
 </html>
