--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style/style.css" />
     <title>Facilistas</title>
   </head>
@@ -102,7 +109,164 @@
           </div>
         </div>
       </section>
-      <section id="crieSuaLista"></section>
+      <section id="crieSuaLista">
+        <div id="titulo-facaLista">
+          <h2>Crie sua lista</h2>
+          <h3>Somos um site inteligente para pessoas ocupadas.</h3>
+        </div>
+        <div id="subtitulo-facaLista">
+          <h4>Faça sua lista ou utilize um modelo pronto</h4>
+          <p>
+            Com o FaciListas você também pode criar sua lista totalmento do zero
+          </p>
+        </div>
+        <div id="cards_facaLista">
+          <div class="card-facaLista">
+            <div class="header-facaLista">SUPERMERCADO</div>
+            <hr class="linha" />
+            <table>
+              <thead>
+                <tr>
+                  <th>CHECKLIST</th>
+                  <th>PRODUTO</th>
+                  <th>QUANTIDADE</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-check"
+                      style="color: #4caf4f"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Arroz</li>
+                    </ul>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-check"
+                      style="color: #4caf4f"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Feijão</li>
+                    </ul>
+                  </td>
+                  <td>2</td>
+                </tr>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-x"
+                      style="color: #f41414"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Açúcar</li>
+                    </ul>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-check"
+                      style="color: #4caf4f"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Café</li>
+                    </ul>
+                  </td>
+                  <td>2</td>
+                </tr>
+              </tbody>
+            </table>
+            <hr class="linha" />
+          </div>
+          <div class="card-facaLista">
+            <div class="header-facaLista">SUPERMERCADO</div>
+            <hr class="linha" />
+            <table>
+              <thead>
+                <tr>
+                  <th>CHECKLIST</th>
+                  <th>PRODUTO</th>
+                  <th>QUANTIDADE</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-check"
+                      style="color: #4caf4f"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Arroz</li>
+                    </ul>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-check"
+                      style="color: #4caf4f"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Feijão</li>
+                    </ul>
+                  </td>
+                  <td>2</td>
+                </tr>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-x"
+                      style="color: #f41414"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Açúcar</li>
+                    </ul>
+                  </td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>
+                    <i
+                      class="fa-sharp fa-regular fa-check"
+                      style="color: #4caf4f"
+                    ></i>
+                  </td>
+                  <td>
+                    <ul>
+                      <li>Café</li>
+                    </ul>
+                  </td>
+                  <td>2</td>
+                </tr>
+              </tbody>
+            </table>
+            <hr class="linha" />
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
