--- a/codigo-fonte/cadastro/index.html
+++ b/codigo-fonte/cadastro/index.html
@@ -1,59 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro</title>
 
-    <link rel="stylesheet" href="/cadastro/CSS/style.css">
-</head>
+    <link rel="stylesheet" href="./CSS/style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="container-cadastro">
-            <div class="wrap-cadastro">
-                <form class="cadastro-form">
-                    <span class="cadastro-form-title">
-                        Crie sua conta
-                    </span>
+      <div class="container-cadastro">
+        <div class="wrap-cadastro">
+          <form class="cadastro-form">
+            <span class="cadastro-form-title"> Crie sua conta </span>
 
-                    <div class="wrap-input margin-top-35 margin-bottom-35">
-                        <input type="text" class="input-form" name="name" autocomplete="off">
-                        <span class="focus-input-form" data-place-holder="Nome"></span>
-                    </div>
-
-                    <div class="wrap-input margin-bottom-35">
-                        <input type="email" class="input-form" name="email" autocomplete="off">
-                        <span class="focus-input-form" data-place-holder="E-mail"></span>
-                    </div>
-
-                    <div class="wrap-input margin-bottom-35">
-                        <input type="password" class="input-form" name="password">
-                        <span class="focus-input-form" data-place-holder="Senha"></span>
-                    </div>
-
-                    <div class="container-cadastro-form-btn">
-                        <button class="cadastro-form-btn" type="submit">Cadastrar</button>
-                    </div>
-
-                    <ul class="cadastro-utils">
-                        <li class="margin-top-8 margin-bottom-8">
-                            <span class="text1">
-                                Já possui conta? Faça
-                            </span>
-                            <a href="#" class="text2"> <!-- colocar href quando tiver -->
-                                login
-                            </a>
-                        </li>
-                    </ul>
-                </form>
+            <div class="wrap-input margin-top-35 margin-bottom-35">
+              <input
+                type="text"
+                class="input-form"
+                name="name"
+                autocomplete="off"
+              />
+              <span class="focus-input-form" data-place-holder="Nome"></span>
             </div>
-            <img src="/cadastro/images/cadastro.png" alt="Cadastro" width="400" height="400" class="margin-left-50">
+
+            <div class="wrap-input margin-bottom-35">
+              <input
+                type="email"
+                class="input-form"
+                name="email"
+                autocomplete="off"
+              />
+              <span class="focus-input-form" data-place-holder="E-mail"></span>
+            </div>
+
+            <div class="wrap-input margin-bottom-35">
+              <input type="password" class="input-form" name="password" />
+              <span class="focus-input-form" data-place-holder="Senha"></span>
+            </div>
+
+            <div class="container-cadastro-form-btn">
+              <button class="cadastro-form-btn" type="submit">Cadastrar</button>
+            </div>
+
+            <ul class="cadastro-utils">
+              <li class="margin-top-8 margin-bottom-8">
+                <span class="text1"> Já possui conta? Faça </span>
+                <a href="#" class="text2">
+                  <!-- colocar href quando tiver -->
+                  login
+                </a>
+              </li>
+            </ul>
+          </form>
         </div>
+        <img
+          src="./images/cadastro.png"
+          alt="Cadastro"
+          width="400"
+          height="400"
+          class="margin-left-50"
+        />
+      </div>
     </div>
 
-    <script src="/cadastro/script.js"></script>
-</body>
-
+    <script src="./script.js"></script>
+  </body>
 </html>
