--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -135,10 +135,7 @@
               <tbody>
                 <tr>
                   <td>
-                    <i
-                      class="fa-sharp fa-regular fa-check"
-                      style="color: #4caf4f"
-                    ></i>
+                    <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
                     <ul>
@@ -149,10 +146,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <i
-                      class="fa-sharp fa-regular fa-check"
-                      style="color: #4caf4f"
-                    ></i>
+                    <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
                     <ul>
@@ -177,10 +171,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <i
-                      class="fa-sharp fa-regular fa-check"
-                      style="color: #4caf4f"
-                    ></i>
+                    <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
                     <ul>
@@ -207,10 +198,7 @@
               <tbody>
                 <tr>
                   <td>
-                    <i
-                      class="fa-sharp fa-regular fa-check"
-                      style="color: #4caf4f"
-                    ></i>
+                    <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
                     <ul>
@@ -221,10 +209,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <i
-                      class="fa-sharp fa-regular fa-check"
-                      style="color: #4caf4f"
-                    ></i>
+                    <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
                     <ul>
@@ -249,10 +234,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <i
-                      class="fa-sharp fa-regular fa-check"
-                      style="color: #4caf4f"
-                    ></i>
+                    <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
                     <ul>
