--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -195,7 +195,7 @@
             <hr class="linha" />
           </div>
           <div class="card-facaLista">
-            <div class="header-facaLista">SUPERMERCADO</div>
+            <div class="header-facaLista">CRIE SEU TÍTULO</div>
             <hr class="linha" />
             <table>
               <thead>
