--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -20,7 +20,7 @@
         <a href="#inicio" class="navbar-item">Início</a>
         <a href="#quemSomos" class="navbar-item">Quem Somos</a>
         <a href="#paraQuem" class="navbar-item">Para quem</a>
-        <a href="../sistema/index.html" class="navbar-item">Faça sua lista</a>
+        <a href="#crieSuaLista" class="navbar-item">Faça sua lista</a>
       </nav>
       <div id="btnHeader-div">
         <button
