ajustando html da pagina inicial

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -211,22 +211,22 @@
                     <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
-                    <ul>
-                      <li>Arroz</li>
+                    <ul class="cinza">
+                      <li>Seu item aqui</li>
                     </ul>
                   </td>
-                  <td>1</td>
+                  <td class="cinza">-</td>
                 </tr>
                 <tr>
                   <td>
                     <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
-                    <ul>
-                      <li>Feijão</li>
+                    <ul class="cinza">
+                      <li>Seu item aqui</li>
                     </ul>
                   </td>
-                  <td>2</td>
+                  <td class="cinza">-</td>
                 </tr>
                 <tr>
                   <td>
@@ -236,22 +236,22 @@
                     ></i>
                   </td>
                   <td>
-                    <ul>
-                      <li>Açúcar</li>
+                    <ul class="cinza">
+                      <li>Seu item aqui</li>
                     </ul>
                   </td>
-                  <td>1</td>
+                  <td class="cinza">-</td>
                 </tr>
                 <tr>
                   <td>
                     <i class="fas fa-check" style="color: green"></i>
                   </td>
                   <td>
-                    <ul>
-                      <li>Café</li>
+                    <ul class="cinza">
+                      <li>Seu item aqui</li>
                     </ul>
                   </td>
-                  <td>2</td>
+                  <td class="cinza">-</td>
                 </tr>
               </tbody>
             </table>
