ajustando css do faca sua lista

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -137,9 +137,9 @@
             <table>
               <thead>
                 <tr>
-                  <th>CHECKLIST</th>
-                  <th>PRODUTO</th>
-                  <th>QUANTIDADE</th>
+                  <th class="laranja">CHECKLIST</th>
+                  <th class="laranja">PRODUTO</th>
+                  <th class="laranja">QUANTIDADE</th>
                 </tr>
               </thead>
               <tbody>
@@ -200,9 +200,9 @@
             <table>
               <thead>
                 <tr>
-                  <th>CHECKLIST</th>
-                  <th>PRODUTO</th>
-                  <th>QUANTIDADE</th>
+                  <th class="laranja">CHECKLIST</th>
+                  <th class="laranja">PRODUTO</th>
+                  <th class="laranja">QUANTIDADE</th>
                 </tr>
               </thead>
               <tbody>
