--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -260,6 +260,12 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>FaciListas© 2024</p>
+      <p>
+        Adrian Sodré, Antonio Cesar Silva, Breno Figueiredo, David Milan e
+        Patrícia Rodrigues
+      </p>
+    </footer>
   </body>
 </html>
