ajustando os links

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -46,7 +46,9 @@
             <h1 id="title"><span>Simplifique com</span> FaciListas!</h1>
             <p>Solução inteligente para organização e criação de listas</p>
           </div>
-          <button id="btn-action-prin">Inscreva-se de graça</button>
+          <button id="btn-action-prin" href="../cadastro/index.html">
+            Inscreva-se de graça
+          </button>
         </div>
         <img src="../img/imgPrincipal.png" alt="banner principal" />
       </section>
@@ -69,7 +71,7 @@
               sociais, garantindo uma experiência inclusiva para todos os
               usuários.
             </p>
-            <button>Inscreva-se de graça</button>
+            <button href="../cadastro/index.html">Inscreva-se de graça</button>
           </div>
         </div>
       </section>
