--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -46,7 +46,10 @@
             <h1 id="title"><span>Simplifique com</span> FaciListas!</h1>
             <p>Solução inteligente para organização e criação de listas</p>
           </div>
-          <button id="btn-action-prin" href="../cadastro/index.html">
+          <button
+            id="btn-action-prin"
+            onclick="window.location.href = '../cadastro/index.html'"
+          >
             Inscreva-se de graça
           </button>
         </div>
@@ -71,7 +74,9 @@
               sociais, garantindo uma experiência inclusiva para todos os
               usuários.
             </p>
-            <button href="../cadastro/index.html">Inscreva-se de graça</button>
+            <button onclick="window.location.href = '../cadastro/index.html'">
+              Inscreva-se de graça
+            </button>
           </div>
         </div>
       </section>
