--- a/codigo-fonte/cadastro/index.html
+++ b/codigo-fonte/cadastro/index.html
@@ -21,6 +21,7 @@
                 class="input-form"
                 name="name"
                 autocomplete="off"
+                id="nome"
               />
               <span class="focus-input-form" data-place-holder="Nome"></span>
             </div>
@@ -31,17 +32,25 @@
                 class="input-form"
                 name="email"
                 autocomplete="off"
+                id="email"
               />
               <span class="focus-input-form" data-place-holder="E-mail"></span>
             </div>
 
             <div class="wrap-input margin-bottom-35">
-              <input type="password" class="input-form" name="password" />
+              <input
+                type="password"
+                class="input-form"
+                name="password"
+                id="senha"
+              />
               <span class="focus-input-form" data-place-holder="Senha"></span>
             </div>
 
             <div class="container-cadastro-form-btn">
-              <button class="cadastro-form-btn" type="submit">Cadastrar</button>
+              <button class="cadastro-form-btn" type="submit" id="btn-cadastro">
+                Cadastrar
+              </button>
             </div>
 
             <ul class="cadastro-utils">
