--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -64,7 +64,7 @@
       </button>
     </div>
     <main id="principal">
-      <section id="inicio" style="display: none">
+      <section id="inicio">
         <div id="titulos-principais">
           <div id="div-titulos">
             <h1 id="title"><span>Simplifique com</span> FaciListas!</h1>
@@ -79,7 +79,7 @@
         </div>
         <img src="../img/imgPrincipal.png" alt="banner principal" />
       </section>
-      <section id="quemSomos" style="display: none">
+      <section id="quemSomos">
         <div id="title-quemSomos">
           <h2>FaciListas</h2>
           <h4>Somos um site inteligente para pessoas ocupadas</h4>
@@ -104,7 +104,7 @@
           </div>
         </div>
       </section>
-      <section id="paraQuem" style="display: none">
+      <section id="paraQuem">
         <div id="title-paraQuem">
           <h3>Você é um amante da lista?</h3>
           <h3>
@@ -150,7 +150,7 @@
           </div>
         </div>
       </section>
-      <section id="crieSuaLista" style="display: none">
+      <section id="crieSuaLista">
         <div id="titulo-facaLista">
           <h2>Crie sua lista</h2>
           <h3>Somos um site inteligente para pessoas ocupadas.</h3>
