adicionando o botao 'criar lista' na pagina inicial

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -161,6 +161,14 @@
             Com o FaciListas você também pode criar sua lista totalmento do zero
           </p>
         </div>
+        <div style="padding: 0 0 2rem 0">
+          <button
+            id="btn-action-prin"
+            onclick="window.location.href = '../sistema/index.html'"
+          >
+            Criar lista
+          </button>
+        </div>
         <div id="cards_facaLista">
           <div class="card-facaLista">
             <div class="header-facaLista">SUPERMERCADO</div>
@@ -291,7 +299,7 @@
         </div>
       </section>
     </main>
-    <footer style="display: none">
+    <footer>
       <p>FaciListas© 2024</p>
       <p>
         Adrian Sodré, Antonio Cesar Silva, Breno Figueiredo, David Milan e
